# fifa-tickets-app

./: .dockerignore  .gitignore  AUTHENTICATION_FLOW.md  COOKIE_SETTINGS_LOCATIONS.md  DEBUG_STEPS.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  FIXES_SUMMARY.md  IMMEDIATE_DEBUG.md  PRODUCTION_DEBUGGING.md  PROFILE_401_DEBUG.md  Procfile  RAILWAY_SETUP.md  README.md  TEST_RESULTS.md  app.py  cookies.txt  cookies_login.txt  docker-compose.yml  env.example  gunicorn.conf.py  main.py  models.py  pyproject.toml  railway_simple.sh  railway_start.sh  requirements.txt  start.sh  test_login_local.sh  test_profile_auth.sh
backend/: .gitignore  Dockerfile  app.py  check_production_data.py  debug_production.py  force_reload_matches.py  jwt_utils.py  llm_service.py  migrate_match_dates.py  models.py  production_migration.py  pyproject.toml  quick_debug.py  requirements.txt  reset_user_password.py  simple_migration.py  test_chatbot_queries.py  test_date_consistency.py  test_docker.py  test_functions_direct.py  test_jwt_auth.py
backend/data/: fifa_match_schedule.csv  match_games.csv
backend/static/: manifest.json
backend/static/css/: style.css  tailwind.css
frontend/: .dockerignore  Dockerfile  jsconfig.json  next.config.ts  package-lock.json  package.json  test-sorting.md  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: use-auth.ts  use-chat.ts  use-matches.ts  use-profile.ts  use-tickets.ts
frontend/lib/: api.ts  types.ts
static/: sw.js
static/css/: tailwind.css
static/js/: main.js
templates/: dashboard.html  login.html
(+18 files in other folders)
