[project]
name = "fifa-tickets-app"
version = "0.1.0"
description = "FIFA 2026 Ticket Management Web App - A simple, lightweight web application for managing FIFA 2026 ticket purchases"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3",
    "flask-sqlalchemy>=3.0.5",
    "werkzeug>=2.3.7",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "gunicorn>=23.0.0",
]

# This is a web application, not a Python package
# No build system needed
