[project]
name = "fifa-tickets-app"
version = "1.0.0"
description = "FIFA 2026 Ticket Management App"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = []
prod = [
    "gunicorn>=21.2.0",
]
